<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".ui.onboarding.fragment.SignUp4Fragment">

    <ImageView
        android:id="@+id/ccube_imageView"
        android:layout_width="138dp"
        android:layout_height="117dp"
        android:layout_marginTop="127dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studgenie_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/sign_up_title_textView"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/congratulations"
        android:textColor="@color/text_gradient_blue"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccube_imageView"
        app:layout_constraintVertical_bias="0.184" />


    <TextView
        android:id="@+id/sign_up_title_textView_2"
        android:layout_width="310dp"
        android:layout_height="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/account_created"
        android:textColor="@color/gradient_black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title_textView"
        app:layout_constraintVertical_bias="0.056" />


    <Button
        android:id="@+id/verify_proceed_button"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/curved_button"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/begin_learning"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title_textView_2"
        app:layout_constraintVertical_bias="0.295"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/back_arrow_button"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_title_textView"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>