<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.onboarding.fragment.SignUp2Fragment">

    <ImageView
        android:id="@+id/ccube_imageView"
        android:layout_width="103dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studgenie_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/sign_up_title_textView"
        android:layout_width="169dp"
        android:layout_height="35dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/get_started"
        android:textColor="@color/text_gradient_blue"
        android:textSize="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toast_message_during_signup" />

    <com.studgenie.app.ui.common.OtpEditText
        android:id="@+id/enter_otp_edit_text"
        android:layout_width="306dp"
        android:layout_height="65dp"
        android:layout_marginTop="81dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/orangePrimary"
        android:digits="0 1 2 3 4 5 6 7 8 9"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/enter_number"
        android:inputType="phone"
        android:maxLength="6"
        android:textColor="@color/black"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title_textView" />

    <TextView
        android:id="@+id/did_not_receive_otp_text_view"
        android:layout_width="130dp"
        android:layout_height="15dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/raleway"
        android:text="@string/receive_otp"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp_edit_text" />

    <Button
        android:id="@+id/verify_proceed_button"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/curved_button"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/enter_otp_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/did_not_receive_otp_text_view"
        app:layout_constraintVertical_bias="0.134" />


    <TextView
        android:id="@+id/enter_otp_title_text_view"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title_textView" />

    <TextView
        android:id="@+id/resend_otp_button"
        android:layout_width="80dp"
        android:layout_height="15dp"
        android:layout_marginLeft="4dp"
        android:fontFamily="@font/raleway"
        android:gravity="start"
        android:text="Resend OTP"
        android:textColor="@color/gradient_orange"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/did_not_receive_otp_text_view"
        app:layout_constraintStart_toEndOf="@+id/did_not_receive_otp_text_view"
        app:layout_constraintTop_toTopOf="@+id/did_not_receive_otp_text_view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="00:30"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/verify_proceed_button"
        app:layout_constraintEnd_toEndOf="@+id/enter_otp_edit_text"
        app:layout_constraintTop_toTopOf="@+id/resend_otp_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/toast_message_during_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@color/transparent_blue"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:padding="5dp"
        android:text="OTP resend to your mobile number"
        android:textAlignment="center"
        android:textColor="@color/gradient_blue"
        android:textSize="12dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccube_imageView" />

    <Button
        android:id="@+id/back_arrow_button"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_title_textView"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>